ch08 ch09 commit

--- a/cwCh08/src/main/webapp/08_01domProperty.html
+++ b/cwCh08/src/main/webapp/08_01domProperty.html
@@ -26,6 +26,7 @@ text += "p.innerHTML = " + p.innerHTML + "\n";
 text += "p.style.color = " + p.style.color + "\n";
 //DOM의 style속성은 HTML의 style속성이나 CSS속성을 나타내는 속성
 //html style속성 접근은 DOM에서는 style.css속성으로 접근
+text += "p.style.background-color = " + p.style.backgroundColor + "\n";
 text += "p.onclick = " + p.onclick + "\n";
 //html의 이벤트리스너속성은 DOM에서 동일한 이름의 속성을 가짐
 //값은 이벤트함수로 나타난다(on이 삭제된 이름이 이벤트처리메서드 이름임)
