Multiple Progress Bars 추가

--- a/cwBootStrap/src/main/webapp/15progressBar.html
+++ b/cwBootStrap/src/main/webapp/15progressBar.html
@@ -48,5 +48,23 @@
 		<div class="progress-bar bg-danger progress-bar-striped progress-bar-animated" style="width:70%">70%</div>
 	</div>
 </div>
+
+<p></p>
+<div class="container">
+	<h2>Multiple Progress Bars</h2>
+	<p>hi</p>
+	<!-- progress-bar는 인라인 레벨임(여러개의 진도의 합은 총 100%임),높이는 height로 조정 -->
+	<div class="progress" style="height:30px;">
+		<div class="progress-bar bg-success" style="width:40%;height:30px;">
+		Free Space(40%)
+		</div>
+		<div class="progress-bar bg-warning" style="width:10%;height:30px;">
+		Warning(10%)
+		</div>
+		<div class="progress-bar bg-danger" style="width:20%;height:30px;">
+		Danger(20%)
+		</div>
+	</div>
+</div>
 </body>
 </html>
