38 line -> getElementById 오타 수정

--- a/cwCh06/src/main/webapp/06_22function.html
+++ b/cwCh06/src/main/webapp/06_22function.html
@@ -35,7 +35,8 @@ let n = adder(24567, 98374); // 함수 호출
 document.write("24567 + 98374는 " + n + "<br>");
 	
 let res = divider(2500,50);
-document.getElement("result").innerHTML = res;
+document.getElementById("result").innerHTML = res;
+
 	
 </script>
 
