--- a/cwBootStrap/src/main/webapp/23carousel.html
+++ b/cwBootStrap/src/main/webapp/23carousel.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -50,7 +51,7 @@
 			<img src="https://www.w3schools.com/bootstrap4/chicago.jpg" alt="Chicago" width="1100" height="500">
 			<div class="carousel-caption">
 				<h3>Chicago</h3>
-				<p>hello chicago!!</p>
+				<p>hello chicago!!!</p>
 			</div>
 		</div>
 		<div class="carousel-item">
